[package]
name = "etebase"
description = "A C and Rust client library for Etebase"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etesync-rs/tree/etebase/"
version = "0.1.0"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "LGPL-2.1-only"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
block-padding= "^0.2.0"
sodiumoxide = "^0.2.6"
http = "^0.2.0"
url = "^2.1.1"
serde = { version = "^1.0.105", features = ["derive"] }
serde_bytes = "^0.11.5"
rmp-serde = "^0.14.3"
reqwest = { version = "^0.10.4", features = ["blocking"] }
