[package]
name = "etebase"
description = "A Rust client library for Etebase"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etebase-rs/"
version = "0.5.0"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["encryption", "sync", "etesync", "cryptography", "firebase"]
categories = ["cryptography", "api-bindings", "database", "development-tools"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
sodiumoxide = "=0.2.6"
libsodium-sys = "=0.2.6"
url = "^2.1.1"
serde = { version = "^1.0.105", features = ["derive"] }
serde_bytes = "^0.11.5"
serde_repr = "^0.1.5"
rmp-serde = "^0.14.3"
reqwest = { version = "^0.10.4", features = ["blocking"], optional = true }
remove_dir_all = "^0.6.0"

[features]
default = ["networking"]
networking = ["reqwest"]
