[package]
name = "etebase"
description = "A Rust client library for Etebase"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etebase-rs/"
version = "0.5.3"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
rust-version = "1.63.0"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["encryption", "sync", "etesync", "cryptography", "firebase"]
categories = ["cryptography", "api-bindings", "database", "development-tools"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
sodiumoxide = "^0.2.7"
url = "^2.2.2"
serde = { version = "^1.0.136", features = ["derive"] }
serde_bytes = "^0.11.5"
serde_repr = "^0.1.7"
rmp-serde = "^1.1.0"
reqwest = { version = "^0.11.10", features = ["blocking"], optional = true }
remove_dir_all = "^0.8.2"

# transitive depenceny through sodiumoxide, we need Signature::from_bytes()
ed25519 = "^1.3.0"

[build-dependencies]
# transitive build dependency of libsodium-sys, waiting for https://github.com/sodiumoxide/sodiumoxide/pull/478
cc = "1.0.3"

[features]
default = ["networking"]
networking = ["reqwest"]
