[package]
name = "etebase-python"
description = "Python bindings to etebase-rs"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etesync-rs/tree/etebase/python/"
version = "0.1.0"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "LGPL-2.1-only"
readme = "../README.md"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
flapigen = { git = "https://github.com/Dushistov/flapigen-rs" }
env_logger = "^0.7"
log = "^0.4.6"

[dependencies]
cpython = { version = "0.3", features = ["extension-module"] }
etebase = { path = "../" }
